<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="135dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#464646" >
    
	<RelativeLayout
        android:id="@+id/content"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="135dp"
        >
 
        <TextView  
            android:id="@+id/message"
            android:padding="5dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_photos"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_alignParentTop="true"/>
         <Button 
            android:id="@+id/positiveButton"
            android:layout_below="@+id/message"
            android:layout_marginTop="3dip"
            android:layout_width="100dp" 
            android:layout_height="40dp"
            android:singleLine="true"
            android:layout_centerHorizontal="true"
            android:text="@string/share_delete_query"
            android:textColor="#000000"
            android:layout_marginLeft="30dp" 
            />
         <Button 
            android:id="@+id/cancelButton"
            android:layout_below="@+id/positiveButton"
            android:layout_marginTop="3dip"
            android:layout_width="100dp" 
            android:layout_height="40dp"
            android:layout_marginLeft="30dp" 
            android:singleLine="true"
            android:layout_centerHorizontal="true"
            android:text="@string/share_delete_cancle"
            android:textColor="#000000"
            />
 
    </RelativeLayout>
 
</LinearLayout>